homelab/seaweedfs/config/ingress.yaml
---
# Master UI - cluster overview, volume status, topology
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: seaweedfs-master
  namespace: seaweedfs
  annotations:
    traefik.ingress.kubernetes.io/router.tls: "true"
    traefik.ingress.kubernetes.io/router.entrypoints: websecure
spec:
  ingressClassName: traefik
  tls:
    - hosts:
        - seaweed.k8s.hu.ls
      secretName: wildcard-k8s-hu-ls-tls
  rules:
    - host: seaweed.k8s.hu.ls
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: seaweedfs-master
                port:
                  number: 9333
---
# Filer UI - file browser, S3 browser
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: seaweedfs-filer
  namespace: seaweedfs
  annotations:
    traefik.ingress.kubernetes.io/router.tls: "true"
    traefik.ingress.kubernetes.io/router.entrypoints: websecure
spec:
  ingressClassName: traefik
  tls:
    - hosts:
        - filer.k8s.hu.ls
      secretName: wildcard-k8s-hu-ls-tls
  rules:
    - host: filer.k8s.hu.ls
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: seaweedfs-filer
                port:
                  number: 8888
